# TaskManagerAPI

./: .dockerignore  .env.example  .gitignore  .pylintrc  Makefile  README.md  Task Manager API.postman_collection.json  concurrency-rate.py  docker-compose.yml  dockerfile  entrypoint.sh  main.py  pyproject.toml  pytest.ini  task-manager.drawio
alembic/: env.py
api/: __init__.py
api/v1/: __init__.py
api/v1/health/: __init__.py  health.py
api/v1/tasks/: __init__.py  tasks.py
api/v1/users/: __init__.py  users.py
app/controllers/: task.py
app/models/: task.py
app/repository/: task.py
app/schemas/: exceptions.py  request.py  response.py
core/: config.py  server.py
core/controller/: base.py
core/database/: __init__.py  database.py  session.py  transaction.py
core/exceptions/: __init__.py  base.py
core/factory/: factory.py
core/fastapi/middleware/: sqlalchemy.py
core/repository/: base.py  enum.py
core/security/: jwt.py  permissions.py
core/utils/: logging.py
tests/: conftest.py
tests/api/: overrides.py
tests/api/v1/monitoring/: test_health.py
tests/api/v1/tasks/: test_tasks.py
tests/bdd/: test_task.py
tests/bdd/features/: task_manager.feature
tests/core/repository/: test_base.py
tests/factory/: task.py
