[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = "A Task Manager API"
authors = ["Ashutosh Kesarwani <ashutoshkesarwani999@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
uvicorn = "^0.32.0"
pytest-bdd = "^8.0.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
